--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,3 +105,7 @@
 .notifications-menu .dropdown-menu {
     font-size: 12px !important;
 }
+
+.checkboxmodal {
+    margin-top: 12px !important;
+}
